src/main/resources/vpc-network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC and networking for League App

Resources:
  LeagueVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref LeagueVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']

  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow traffic to app
      VpcId: !Ref LeagueVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0

Outputs:
  VPCId:
    Value: !Ref LeagueVPC
  SubnetId:
    Value: !Ref PublicSubnet1
  SecurityGroupId:
    Value: !Ref AppSecurityGroup
